--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 header {
     height: 100vh;
-    background-image: url("/images/profile-background.jpg");
+    background-image: url("../images/profile-background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
