--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,7 @@ body {
 
 header {
     height: 100vh;
-    background-image: url('/images/profile_background.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color: #4B3B40;
 }
 
 .nav-bar-container  {
