--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ footer {
 }
 
 .header-container {
-        background-image: url('/images/header-background.jpg');
+        /* background-image: url('/images/header-background.jpg');
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover; */
         height: 100vh;
-        /* background-color: #4B3B40; */
+        background-color: #4B3B40;
 }
 
 .current-skills {
@@ -58,11 +58,6 @@ footer {
     font-size: 3rem;
 }
 
-
-.get-started {
-    padding: 10px 15px;
-    background-color: floralwhite;
-}
 
 .main-title {
     text-align: center;
